# vercel-fastapi

./: Dockerfile  main.py  pyproject.toml  requirements.txt  vercel.json
api/: main.py
