[project]
name = "test-vercel-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.129.0",
    "litellm>=1.81.13",
    "mistralai>=1.12.2",
    "pymupdf4llm>=0.3.4",
    "pypdf>=6.7.0",
    "uvicorn>=0.41.0",
]
